# fakhrusy-com-backend

./: Cargo.toml  req.http
.github/workflows/: ci.yml
migrations/2021-10-20-165900_create_users_table/: up.sql
src/: constants.rs  errors.rs  main.rs  schema.rs  utils.rs
src/api/auth/: login.rs  register.rs
src/api/profile/: mod.rs  my_profile.rs
src/extractor/: auth.rs
src/middleware/: auth.rs
src/model/: auth.rs  db.rs  errors.rs  mod.rs  response.rs  user.rs
