[package]
name = "fakhrusy-com-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = "1"
serde_json = "1"
derive_more = "0.99.0"
argon2 = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
actix-web-httpauth = "0.6.0-beta.3"
jsonwebtoken = "7.2.0"
chrono = "0.4"
regex = "1.5.4"
futures = "0.3"
actix-service = "1.0.6"